# catch-ai

./: .gitignore  README.md  guide.md  pyproject.toml  test-openai.py
resources/: data.json
src/app/: main.py
src/app/authentication/: auth.py  envfileexample.py  model.py  util.py
src/app/caching/: redis-setup.py
src/app/core/: config.py  security.py
src/app/profiling/: guide.md
src/app/prometheusandfastapi/: local-main.py  prometheus.yml
src/app/testing/: dto.py  logic.py
tests/: it_test.py  test_main.py
