[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastpi-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "authlib>=1.6.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
